--- a/slides/cap_intro.tex
+++ b/slides/cap_intro.tex
@@ -1,55 +1,76 @@
 
+El volumen de datos textuales digitalizados generados diariamente, provenientes de fuentes como la web, redes sociales, registros médicos y libros digitalizados, es simplemente enorme. Como resultado, se ha vuelto imperativo traducir, analizar y gestionar esta avalancha de palabras y texto.
 
-El volumen de datos textuales digitalizados que se genera cada día es enorme (por ejemplo, la web, redes sociales, registros médicos, libros digitalizados). Por lo tanto, también crece la necesidad de traducir, analizar y gestionar esta avalancha de palabras y texto.
+El Procesamiento del Lenguaje Natural (PLN) es el campo que se encarga de diseñar métodos y algoritmos que trabajan con datos de lenguaje natural, ya sea como entrada o salida \cite{goldberg2017neural}. El objetivo principal del PLN es desarrollar y analizar algoritmos computacionales y representaciones para procesar el lenguaje humano de manera efectiva \cite{jacobbook}.
 
-El procesamiento del lenguaje natural (PLN) es el campo que se encarga de diseñar métodos y algoritmos que toman como entrada o producen como salida datos de \textbf{lenguaje natural} no estructurado \cite{goldberg2017neural}. El PLN se centra en el diseño y análisis de algoritmos computacionales y representaciones para procesar el lenguaje humano \cite{jacobbook}.
+Es importante destacar que el lenguaje natural puede provenir tanto de fuentes escritas como habladas. Aunque el PLN suele centrarse más en el procesamiento de texto, se pueden aplicar técnicas de reconocimiento de habla o transcripción para abordar de manera similar ambas fuentes de información.
+
+\section{Desafíos del Procesamiento del Lenguaje Natural (PLN)}
+
+A continuación, se discuten varias propiedades del lenguaje humano que hacen extremadamente complejo cumplir con los objetivos del PLN.
+
+\paragraph{Ambigüedad}
+
+El lenguaje humano es sumamente ambiguo. Tomemos, por ejemplo, las siguientes oraciones:
+
+\begin{enumerate}
+  \item ``Yo comí pizza con amigos.''
+  \item ``Yo comí pizza con aceitunas.''
+  \item ``Yo comí pizza con un tenedor.''
+\end{enumerate}
+
+Aunque las tres oraciones tienen una estructura gramatical muy similar, difieren en cómo las frases nominales siguientes a la preposición ``con'' se relacionan con las partes anteriores. En la primera oración, ``amigos'' modifica al pronombre ``yo''; en la segunda, ``aceitunas'' modifica a la pizza; y en la tercera, ``un tenedor'' modifica al verbo ``comer''. Para realizar estas distinciones, es necesario tener en cuenta el contexto situacional, lo cual puede resultar natural para una persona, pero muy complejo para una máquina.
+
+\paragraph{Dinamismo}
+
+El lenguaje está en constante cambio y evolución. Siempre surgen nuevas palabras o se les asignan nuevos significados, mientras que otras palabras caen en desuso. Las redes sociales, por ejemplo, pueden acelerar este proceso, como ocurre con los hashtags en Twitter.
+
+\paragraph{Discretitud}
+
+El lenguaje escrito, como una oración o un documento, se puede entender como una secuencia de palabras discretas provenientes de un vocabulario finito. La naturaleza discreta de las palabras implica que no podemos inferir la relación entre dos palabras basándonos únicamente en las letras que las componen. Por ejemplo, las palabras ``hamburguesa'', ``pizza'' y ``tiza'', aunque las dos primeras están más cerca entre sí semánticamente, las dos últimas tienen una mayor similitud en cuanto a las letras que las forman.
+
+\paragraph{Composicionalidad}
+El significado de una oración va más allá del significado individual de sus palabras. Esto implica que, aunque tengamos formas de representar computacionalmente el significado de las palabras, esto no garantiza que podamos representar cómo se componen para formar significados a nivel de oración.
+
+\paragraph{Dispersión (sparseness)}
+
+La forma en que las palabras (símbolos discretos) pueden combinarse para formar significados es prácticamente infinita. Esto implica que, en general, las oraciones que encontramos en un documento son únicas o rara vez han sido escritas antes. Por lo tanto, cualquier enfoque de fuerza bruta que intente memorizar oraciones a partir de una coleccion de documentos data (o corpus) no garantiza una buena generalización a textos nuevos.
 
 
 
 
 
-Una tarea común de PLN es el Reconocimiento de Entidades Nombradas (NER, por sus siglas en inglés). Por ejemplo:
-
-\begin{figure}[h]
-	\includegraphics[scale=0.4]{pics/NER.png}
-	\caption{Reconocimiento de Entidades Nombradas}
-\end{figure}
-
-El lenguaje humano es altamente ambiguo, como en las frases: "Comí pizza con amigos", "Comí pizza con aceitunas" o "Comí pizza con un tenedor". Además, el lenguaje está en constante cambio y evolución, como ocurre con los hashtags en Twitter.
 
 \section{PLN y Lingüística Computacional}
-PLN suele confundirse con otra disciplina hermana llamada Lingüística Computacional (LC). Si bien ambas están estrechamente relacionadas, tienen un foco distinto. La LC busca responder preguntas fundamentales sobre el lenguaje mediante el uso de la computación, es decir, cómo entendemos el lenguaje, cómo producimos lenguaje o cómo aprendemos lenguaje. Mientras que en PLN el foco está en resolver problemas específicos, tales como las transcripción automática del habla, la traducción automática, la extracción de información de documentos y el análisis de opiniones en redes sociales. Es importante señalar que en PLN, el éxito de una solución se mide en base métricas concretas (Ej: qué tan similar es la traducción automática a una hecha por un humano) independientemente si el modelo hace uso de alguna teoría lingüística.
 
+El Procesamiento del Lenguaje Natural (PLN) a menudo se confunde con otra disciplina relacionada llamada Lingüística Computacional (LC). Aunque están estrechamente vinculadas, tienen enfoques distintos. La LC busca abordar preguntas fundamentales sobre el lenguaje utilizando la computación, investigando cómo entendemos, producimos y aprendemos lenguaje. En este sentido, la LC se acerca más a la lingüística, cuyo objeto de estudio es el lenguaje humano, apoyándose en métodos computacionales, de manera similar a la biología computacional o la astronomía computacional.
 
+Por otro lado, en el PLN el enfoque está en resolver tareas específicas, como la transcripción automática del habla, la traducción automática, la extracción de información de documentos y el análisis de opiniones en redes sociales. Es importante señalar que en el PLN, el éxito de una solución se mide en función de métricas concretas, como la similitud de una traducción automática con una realizada por un humano, independientemente de si el modelo utiliza alguna teoría lingüística. Si bien los conocimientos lingüísticos fundamentales pueden ser cruciales para llevar a cabo estas tareas, el éxito se evalúa en función de si se logra o no el objetivo establecido, de acuerdo con una métrica de evaluación \cite{jacobbook}.
 
-El procesamiento del lenguaje natural (PLN) desarrolla métodos para resolver problemas prácticos relacionados con el lenguaje \cite{JohnsonMLSS}.
+\section{Tareas en Procesamiento del Lenguaje Natural (PLN)}
 
-Algunos ejemplos son:
+El procesamiento del lenguaje natural (PLN) desarrolla métodos para resolver problemas prácticos relacionados con el lenguaje \cite{JohnsonMLSS}. A estos problemas se les suele llamar ``tareas'' o ``tasks'' en inglés. Cada tarea define formalmente la entrada (input) y salida (output) esperada de un sistema de PLN.
 
-\begin{itemize}
-  \item Reconocimiento automático del habla.
-  \item Traducción automática.
-  \item Extracción de información de documentos.
-\end{itemize}
-
-La lingüística computacional (LC) estudia los procesos computacionales subyacentes al lenguaje (humano).
+A continuación, se presentan algunos ejemplos de estas tareas junto con sus nombres en inglés:
 
 \begin{itemize}
-  \item ¿Cómo comprendemos el lenguaje?
-  \item ¿Cómo producimos el lenguaje?
-  \item ¿Cómo aprendemos el lenguaje?
+  \item \textbf{Reconocimiento automático del habla (Speech Recognition)}: La entrada es una señal de audio con voz y la salida es texto escrito.
+  \item \textbf{Traducción automática (Machine Translation)}: La entrada es texto en el idioma fuente y la salida es texto en el idioma destino.
+  \item \textbf{Extracción de información de documentos (Information Extraction)}: La entrada es texto libre y la salida es una tabla estructurada que contiene la información extraída del texto.
+  \item \textbf{Clasificación de texto (Text Classification)}: La entrada es texto libre y la salida es la asignación a una categoría discreta dentro de un conjunto finito de categorías.
+  \item \textbf{Extracción de Entidades Nombradas (Named Entity Recognition, NER)}: La entrada es una oración y la salida es la marcación de las entidades identificadas en la oración, como personas, lugares u organizaciones, como se muestra en la Figura \ref{fig:ner}.
+  \item \textbf{Respuestas a Preguntas (Question Answering)}: La entrada es una pregunta y la salida es una respuesta.
+  \item \textbf{Comprensión de Lectura (Reading Comprehension)}: La entrada es un pasaje de texto y una pregunta, y la salida es la ubicación marcada donde se encuentra la respuesta correcta dentro del pasaje proporcionado.
+  \item \textbf{Etiquetado Gramatical (Part-of-Speech Tagging)}: La entrada es una oración y la salida son las categorías gramaticales (por ejemplo, verbo, sustantivo, adjetivo) de las palabras dentro de la oración.
+  \item \textbf{Extracción de Resúmenes (Summarization)}: La entrada es un documento y la salida es un párrafo que resume su contenido.
 \end{itemize}
 
-El PLN y la LC utilizan métodos y modelos similares.
-
-
-Aunque existe una superposición sustancial, hay una diferencia importante en el enfoque. La LC se centra en la lingüística respaldada por métodos computacionales (similar a la biología computacional o la astronomía computacional). En lingüística, el lenguaje es el objeto de estudio. El PLN se centra en resolver tareas bien definidas relacionadas con el lenguaje humano (como la traducción, la respuesta a consultas, las conversaciones). Si bien los conocimientos lingüísticos fundamentales pueden ser cruciales para realizar estas tareas, el éxito se mide en función de si y cómo se logra el objetivo (según una métrica de evaluación) \cite{jacobbook}.
-
-
-
-El procesamiento del lenguaje natural y la lingüística computacional están estrechamente relacionados y se superponen en muchos aspectos. Ambos campos utilizan métodos y modelos similares para abordar problemas relacionados con el lenguaje humano. Sin embargo, la diferencia principal radica en el enfoque: la lingüística computacional se centra en la lingüística respaldada por métodos computacionales, mientras que el procesamiento del lenguaje natural se centra en resolver tareas prácticas relacionadas con el lenguaje. Ambos campos son fundamentales para comprender y aprovechar el poder del lenguaje humano en la era digital.
-
-
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.4]{pics/NER.png}
+	\caption{Reconocimiento de Entidades Nombradas}
+	\label{fig:ner}
+\end{figure}
 \section{Niveles de descripción lingüística}
 
 El campo de la \textbf{descripción lingüística} abarca diferentes niveles:
@@ -130,6 +151,10 @@ La pragmática se centra en cómo el contexto influye en la interpretación y el
 
 Comprender y producir el lenguaje computacionalmente es extremadamente complejo.  La tecnología más exitosa actualmente para abordar PLN es el aprendizaje automático supervisado que consiste en una familia de algoritmos que “aprenden” a construir la respuesta del problema en cuestión en base a encontrar patrones en datos de entrenamiento etiquetados. Por ejemplo, si queremos tener un modelo que nos diga si un tweet tiene un sentimiento positivo o negativo respecto a un producto, primero necesito  etiquetar manualmente un conjunto de tweets con su sentimiento asociado. Luego debo entrenar un algoritmo de aprendizaje sobre estos datos para poder predecir de manera automática el sentimiento asociado a tweets desconocidos. Como se podrán imaginar, el etiquetado de datos es una parte fundamental de la solución y puede ser un proceso muy costoso, especialmente cuando se requiere conocimiento especializado para definir la etiqueta.
 
+La esencia del aprendizaje automático supervisado es la creación de mecanismos que puedan examinar ejemplos y producir generalizaciones \cite{goldberg2017neural}. Diseñamos un algoritmo cuya entrada es un conjunto de ejemplos etiquetados y cuya salida es una función (o un programa) que recibe una instancia y produce la etiqueta deseada. Por ejemplo, si la tarea es distinguir entre correos electrónicos de spam y no spam, los ejemplos etiquetados serían correos electrónicos etiquetados como spam y correos electrónicos etiquetados como no spam. Se espera que la función resultante produzca predicciones de etiquetas correctas también para instancias que no ha visto durante el entrenamiento. Este enfoque difiere de diseñar un algoritmo para realizar la tarea (por ejemplo, sistemas basados en reglas diseñados manualmente).
+
+
+
 Aunque los seres humanos somos grandes usuarios del lenguaje, también somos muy malos para comprender y describir formalmente las reglas que rigen el lenguaje.
 
 Entender y producir lenguaje utilizando computadoras es altamente desafiante. Los métodos más conocidos para lidiar con datos de lenguaje se basan en el aprendizaje automático supervisado.
@@ -153,22 +178,8 @@ Baghdad      NNP  I-NP  I-LOC
 
 \footnotemark{Fuente: \url{https://www.clips.uantwerpen.be/conll2003/ner/}}
 
-\section{Desafíos del Lenguaje}
 
-Existen tres propiedades desafiantes del lenguaje: la discreción, la composicionalidad y la dispersión.
-
-\textbf{Discreción}: no podemos inferir la relación entre dos palabras a partir de las letras que las componen (por ejemplo, hamburguesa y pizza).
-
-\textbf{Composicionalidad}: el significado de una oración va más allá del significado individual de sus palabras.
-
-\textbf{Dispersión}: la forma en que las palabras (símbolos discretos) pueden combinarse para formar significados es prácticamente infinita.
-
-
-
-\section{Ejemplo de tareas NLP}
-
-
-\paragraph{Clasificación de temas}
+\subsection{Ejemplo 1: Clasificación de temas}
 
 La clasificación de temas es una tarea de Procesamiento del Lenguaje Natural (PLN) en la cual se asigna a un documento una de varias categorías, como deportes, política, cotilleos o economía. Las palabras presentes en los documentos brindan pistas importantes sobre su tema. Sin embargo, redactar reglas para esta tarea es un desafío debido a la complejidad del lenguaje. La anotación de datos, en la cual los lectores clasifican los documentos por temas, puede ayudar a generar conjuntos de datos de entrenamiento para algoritmos de aprendizaje automático supervisado. Estos algoritmos aprenden patrones de uso de palabras que facilitan la categorización de los documentos.
 
@@ -180,7 +191,9 @@ La clasificación de temas es una tarea de Procesamiento del Lenguaje Natural (P
 \item No obstante, los lectores pueden categorizar fácilmente varios documentos según su tema (anotación de datos).
 \item Un algoritmo de aprendizaje automático supervisado puede identificar los patrones de uso de palabras que ayudan a categorizar los documentos.
 \end{itemize}
-\paragraph{Análisis de Sentimiento}
+
+
+\subsection{Ejemplo 2: Análisis de Sentimiento}
 
 El análisis de sentimientos se refiere a la aplicación de técnicas de Procesamiento del Lenguaje Natural (PLN) para identificar y extraer información subjetiva de conjuntos de datos textuales. Un desafío común en el análisis de sentimientos es la clasificación de la polaridad a nivel de mensaje (MPC), donde las frases se clasifican automáticamente en categorías positivas, negativas o neutrales. Las soluciones más avanzadas utilizan modelos de aprendizaje automático supervisado entrenados con ejemplos anotados manualmente.
 
@@ -233,7 +246,7 @@ El PNL plantea diversos desafíos, como los costos de anotación, las variacione
 
 
 
-\section{Desafíos en el Procesamiento del Lenguaje Natural (PNL)}
+\section{Etiquetar Datos en PLN}
 
 \begin{itemize}
    \item \textbf{Costos de Anotación}: la anotación manual es \textbf{laboriosa} y \textbf{consume mucho tiempo}.
@@ -266,66 +279,39 @@ Supervisión Distant:
    \item Es difícil garantizar la calidad de las anotaciones.
 \end{itemize}
 
-\section{Estudio de caso: Clasificación de sentimientos en tweets}
+\section{Paradigmas de Aprendizaje Automático}
 
-\begin{itemize}
-   \item En 2013, el taller de Evaluación Semántica (SemEval) organizó la tarea de "Análisis de sentimientos en Twitter" \cite{Semeval2013}.
-   \item La tarea se dividió en dos sub-tareas: el nivel de expresión y el nivel del mensaje.
-   \item Nivel de expresión: se centró en determinar la polaridad del sentimiento de un mensaje según una entidad marcada dentro de su contenido.
-   \item Nivel del mensaje: se debía determinar la polaridad según el mensaje en general.
-   \item Los organizadores lanzaron conjuntos de datos de entrenamiento y prueba para ambas tareas \cite{Semeval2013}.
-\end{itemize}
+Hasta el año 2010, el Procesamiento del Lenguaje Natural (PLN) se basaba en modelos de aprendizaje poco profundos y en características manuales. Por ejemplo, en 2013, el taller de Evaluación Semántica (SemEval) organizó la tarea de ``Análisis de sentimientos en Twitter'' \cite{Semeval2013}. Esta tarea se dividió en dos sub-tareas: el nivel de expresión y el nivel del mensaje. El nivel de expresión se centró en determinar la polaridad del sentimiento de un mensaje según una entidad marcada dentro de su contenido, mientras que el nivel del mensaje buscaba determinar la polaridad según el mensaje en general. Los organizadores proporcionaron conjuntos de datos de entrenamiento y prueba para ambas tareas \cite{Semeval2013}.
 
-\paragraph{El sistema NRC}
-\begin{itemize}
-   \item El equipo que logró el mejor rendimiento en ambas tareas, entre 44 equipos, fue el equipo \emph{NRC-Canada} \cite{Mohammad2013}.
-   \item El equipo propuso un enfoque supervisado utilizando un clasificador SVM lineal con las siguientes características hechas a mano para representar los tweets:
-   \begin{enumerate}
-      \item N-gramas de palabras.
-      \item N-gramas de caracteres.
-      \item Etiquetas de partes del discurso.
-      \item Agrupaciones de palabras entrenadas con el método de agrupamiento de Brown \cite{brown1992class}.
-      \item El número de palabras alargadas (palabras con un carácter repetido más de dos veces).
-      \item El número de palabras con todas las letras en mayúscula.
-      \item La presencia de emoticonos positivos o negativos.
-      \item El número de negaciones individuales.
-      \item El número de secuencias contiguas de puntos, signos de interrogación y signos de exclamación.
-      \item Características derivadas de lexicones de polaridad \cite{Mohammad2013}. Dos de estos lexicones se generaron utilizando el método PMI a partir de tweets anotados con hashtags y emoticonos.
-   \end{enumerate}
-\end{itemize}
+El equipo que logró el mejor rendimiento en ambas tareas, entre 44 equipos participantes, fue el equipo llamado \emph{NRC-Canada} \cite{Mohammad2013}. Este equipo propuso un enfoque supervisado utilizando un clasificador SVM lineal, utilizando características hechas a mano para representar los tweets. Algunas de estas características fueron:
 
-\section{Ingeniería de características y Aprendizaje Profundo}
+\begin{enumerate}
+  \item N-gramas de palabras.
+  \item N-gramas de caracteres.
+  \item Etiquetas de partes del discurso.
+  \item Agrupaciones de palabras entrenadas con el método de agrupamiento de Brown \cite{brown1992class}.
+  \item El número de palabras alargadas (palabras con un carácter repetido más de dos veces).
+  \item El número de palabras con todas las letras en mayúscula.
+  \item La presencia de emoticonos positivos o negativos.
+  \item El número de negaciones individuales.
+  \item El número de secuencias contiguas de puntos, signos de interrogación y signos de exclamación.
+  \item Características derivadas de lexicones de polaridad \cite{Mohammad2013}. Dos de estos lexicones se generaron utilizando el método PMI a partir de tweets anotados con hashtags y emoticonos.
+\end{enumerate}
 
-\begin{itemize}
-   \item Hasta 2014, la mayoría de los sistemas de PNL de última generación se basaban en ingeniería de características + modelos de aprendizaje automático superficiales (por ejemplo, SVM, HMM).
-   \item Diseñar las características de un sistema de PNL ganador requiere mucho conocimiento específico del dominio.
-   \item El sistema NRC se construyó antes de que el aprendizaje profundo se hiciera popular en PNL.
-   \item Por otro lado, los sistemas de Aprendizaje Profundo se basan en redes neuronales para aprender automáticamente buenas representaciones.
-\end{itemize}
+Hasta el año 2014, la mayoría de los sistemas de última generación en PLN se basaban en ingeniería de características junto con modelos de aprendizaje automático superficiales, como SVM y CRF. Diseñar las características de un sistema de PLN ganador requería un amplio conocimiento específico del dominio. El sistema desarrollado por el equipo NRC-Canada se construyó antes de que el aprendizaje profundo se volviera popular en el campo del PLN. Por otro lado, los sistemas de Aprendizaje Profundo, también conocidos como Deep Learning, se basan en redes neuronales para aprender automáticamente buenas representaciones.
 
-\paragraph{Ingeniería de características y Aprendizaje Profundo}
+El Aprendizaje Profundo ha proporcionado resultados de vanguardia en la mayoría de las tareas de PLN. Grandes cantidades de datos de entrenamiento y máquinas GPU multicore más rápidas son fundamentales para el éxito del aprendizaje profundo. Las redes neuronales y los vectores de palabras, también conocidos como word embeddings, desempeñan un papel fundamental en los modelos modernos de PLN.
 
 \begin{figure}[h]
-   \includegraphics[scale = 0.25]{pics/MLvsDL.png}
+	\centering
+	\includegraphics[scale=0.25]{pics/MLvsDL.png}
+	\caption{Ingeniería de Características vs Aprendizaje Profundo}
+	\label{fig:MLvsDL}
 \end{figure}
 
-\begin{itemize}
-   \item El Aprendizaje Profundo proporciona resultados de última generación en la mayoría de las tareas de PNL.
-   \item Grandes cantidades de datos de entrenamiento y máquinas GPU
-
- multicore más rápidas son clave en el éxito del aprendizaje profundo.
-   \item Las \textbf{redes neuronales} y las \textbf{incrustaciones de palabras} desempeñan un papel fundamental en los modelos modernos de PNL.
-
-\end{itemize}
 
 \paragraph{Aprendizaje Profundo y Conceptos Lingüísticos}
-\begin{itemize}
-   \item Si los modelos de aprendizaje profundo pueden aprender representaciones automáticamente, ¿siguen siendo útiles los conceptos lingüísticos (por ejemplo, sintaxis, morfología)?
-   \item Algunos defensores del aprendizaje profundo argumentan que estas propiedades lingüísticas inferidas y diseñadas manualmente no son necesarias, y que la red neuronal aprenderá estas representaciones intermedias (o equivalentes o mejores) por sí misma \cite{goldberg2016primer}.
-   \item Aún no hay un consenso definitivo al respecto.
-   \item Goldberg cree que muchos de estos conceptos lingüísticos pueden ser inferidos por la red por sí misma si se le proporciona suficiente cantidad de datos.
-   \item Sin embargo, en muchos otros casos no disponemos de suficientes datos de entrenamiento para la tarea que nos interesa, y en estos casos proporcionar a la red los conceptos generales más explícitos puede ser muy valioso.
-\end{itemize}
+Si los modelos de aprendizaje profundo pueden aprender representaciones automáticamente, ¿siguen siendo útiles los conceptos lingüísticos (por ejemplo, sintaxis, morfología)? Algunos defensores del aprendizaje profundo argumentan que estas propiedades lingüísticas inferidas y diseñadas manualmente no son necesarias, y que la red neuronal aprenderá estas representaciones intermedias (o equivalentes o mejores) por sí misma \cite{goldberg2016primer}. Aún no hay un consenso definitivo al respecto. Goldberg cree que muchos de estos conceptos lingüísticos pueden ser inferidos por la red por sí misma si se le proporciona suficiente cantidad de datos. Sin embargo, en muchos otros casos no disponemos de suficientes datos de entrenamiento para la tarea que nos interesa, y en estos casos proporcionar a la red los conceptos generales más explícitos puede ser muy valioso.
 
 \section{Historia}
 
